--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -12,7 +12,9 @@ pyyaml==6.0
 gitpython>=3.1.30
 matplotlib>=3.2.2
 numpy>=1.18.5
-opencv-python>=4.1.1
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 Pillow>=7.1.2
 psutil  # system resources
 PyYAML>=5.3.1
