(inference): testing performed successfully

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "converter/yolov5"]
 	path = converter/yolov5
-	url = git@github.com:TalhaUsuf/yolov5-original.git
+	# url = git@github.com:TalhaUsuf/yolov5-original.git
+	url = https://github.com/TalhaUsuf/yolov5-original.git
